ykanban/base/ingress-hml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ykanban-hml-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: ykanban-hml.yakuzastudio.com.br
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ykanban-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ykanban-web
                port:
                  number: 80
